- fix compilation with some versions of KDE / GCC
- small improvements to syntax highlighting definition
- in console, make cursor go to empty next line after pressing enter, before there is output (more like in the real console)
- add "run selection" option to command log
- script editor commands are piped through the console (by default; this is configurable)
- (Cleanups: scatterplot plugin moved to plots, use "<-" instead of "=")

--- Version 0.4.2 - Dec-04-2006
- code generated by scatterplot plugin is simplified somewhat
- add comment headers to the sections of commands produced by plugins
- if a user command results in the output html file to be modified, auto-refresh output
- add RMB menu to script editor windows
- add options "clear" and "configure" in the console RMB menu, and the command log RMB menu
- add option to save workplace layout not per workspace, but at the end of the session
- add options ("printcmd") to settings
- fix help menu for detached windows
- R X11 device windows are now managed by rkward, with the following initial features:
- R X11 device windows: attach to / detach from workplace (they start detached)
- R X11 device windows: toggle between normal resize mode and (settable) fixed size with scrollbars
- R X11 device windows: menu options to copy / print / duplicate / save / activate devices
- fixed: selecting Window->Close in a detached window would only close the internal view, not the window
- when detaching a window, give it a more reasonable size
- do not open the same script url twice (instead the corresponding window is raised on the second attempt)
- fixed: when closing a detached script editor window, you would not be asked to save changes (if any)
- fixed: occasional crash when re-attaching a script editor window
- new translations: Greek, Catalan
- updated translations: German, French
- added basic plot facility for ECDF (Empirical Cumulative Distribution Function) (menu plots)