@@ -1,3 +1,4 @@
+- fixed: integer spinboxes with starting values greater than 1 would get unreasonable change steps
 - fix compilation with some versions of KDE / GCC
 - small improvements to syntax highlighting definition
 - in console, make cursor go to empty next line after pressing enter, before there is output (more like in the real console)
